v0.10.1/_sources/dev/generated/statsmodels.base.model.GenericLikelihoodModelResults.rst.txt
statsmodels.base.model.GenericLikelihoodModelResults
====================================================

.. currentmodule:: statsmodels.base.model

.. autoclass:: GenericLikelihoodModelResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GenericLikelihoodModelResults.aic
         GenericLikelihoodModelResults.bic
         GenericLikelihoodModelResults.bootstrap
         GenericLikelihoodModelResults.bse
         GenericLikelihoodModelResults.bsejac
         GenericLikelihoodModelResults.bsejhj
         GenericLikelihoodModelResults.conf_int
         GenericLikelihoodModelResults.cov_params
         GenericLikelihoodModelResults.covjac
         GenericLikelihoodModelResults.covjhj
         GenericLikelihoodModelResults.df_modelwc
         GenericLikelihoodModelResults.f_test
         GenericLikelihoodModelResults.get_nlfun
         GenericLikelihoodModelResults.hessv
         GenericLikelihoodModelResults.initialize
         GenericLikelihoodModelResults.llf
         GenericLikelihoodModelResults.load
         GenericLikelihoodModelResults.normalized_cov_params
         GenericLikelihoodModelResults.predict
         GenericLikelihoodModelResults.pvalues
         GenericLikelihoodModelResults.remove_data
         GenericLikelihoodModelResults.save
         GenericLikelihoodModelResults.score_obsv
         GenericLikelihoodModelResults.summary
         GenericLikelihoodModelResults.t_test
         GenericLikelihoodModelResults.t_test_pairwise
         GenericLikelihoodModelResults.tvalues
         GenericLikelihoodModelResults.wald_test
         GenericLikelihoodModelResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GenericLikelihoodModelResults.use_t

