v0.15.0/_sources/dev/generated/statsmodels.base.model.GenericLikelihoodModelResults.rst.txt
statsmodels.base.model.GenericLikelihoodModelResults
====================================================

.. currentmodule:: statsmodels.base.model

.. autoclass:: GenericLikelihoodModelResults
   :exclude-members: bootstrap,conf_int,cov_params,f_test,get_nlfun,get_prediction,initialize,load,normalized_cov_params,predict,remove_data,save,summary,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GenericLikelihoodModelResults.bootstrap
      ~GenericLikelihoodModelResults.conf_int
      ~GenericLikelihoodModelResults.cov_params
      ~GenericLikelihoodModelResults.f_test
      ~GenericLikelihoodModelResults.get_nlfun
      ~GenericLikelihoodModelResults.get_prediction
      ~GenericLikelihoodModelResults.initialize
      ~GenericLikelihoodModelResults.load
      ~GenericLikelihoodModelResults.normalized_cov_params
      ~GenericLikelihoodModelResults.predict
      ~GenericLikelihoodModelResults.remove_data
      ~GenericLikelihoodModelResults.save
      ~GenericLikelihoodModelResults.summary
      ~GenericLikelihoodModelResults.t_test
      ~GenericLikelihoodModelResults.t_test_pairwise
      ~GenericLikelihoodModelResults.wald_test
      ~GenericLikelihoodModelResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GenericLikelihoodModelResults.aic
      ~GenericLikelihoodModelResults.bic
      ~GenericLikelihoodModelResults.bse
      ~GenericLikelihoodModelResults.bsejac
      ~GenericLikelihoodModelResults.bsejhj
      ~GenericLikelihoodModelResults.covjac
      ~GenericLikelihoodModelResults.covjhj
      ~GenericLikelihoodModelResults.df_modelwc
      ~GenericLikelihoodModelResults.hessv
      ~GenericLikelihoodModelResults.llf
      ~GenericLikelihoodModelResults.pvalues
      ~GenericLikelihoodModelResults.score_obsv
      ~GenericLikelihoodModelResults.tvalues
      ~GenericLikelihoodModelResults.use_t
   
   
   